--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h1>Rock & Festival</h1>
 
         <nav class="navegacion-principal">
-          <a href="#">Line Up</a>
-          <a href="#">Boletos</a>
-          <a href="#">Galeria</a>
+          <a href="#lineup">Line Up</a>
+          <a href="#boletos">Boletos</a>
+          <a href="#galeria">Galeria</a>
         </nav>
       </div>
     </header>
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <section class="lineup">
+    <section id="lineup" class="lineup">
       <h3>Line Up</h3>
 
       <p class="dia">Viernes 21</p>
@@ -122,13 +122,60 @@
       </div>
     </section>
 
-    <section class="galeria contenedor">
+    <section id="galeria" class="galeria contenedor">
       <h3>Galeria</h3>
-      <ul class="galeria-imagenes">
-
-      </ul>
+      <ul class="galeria-imagenes"></ul>
     </section>
 
+    <section id="boletos" class="boletos bg-verde">
+      <h3>Boletos</h3>
+
+      <div class="contenedor contenedor-boletos">
+        <div class="basico pase">
+          <p class="nombre-pase">Pase 1 Dia</p>
+
+          <header class="pase-header">
+            <p>Incluye</p>
+          </header>
+
+          <div class="pase-body">
+            <ul>
+              <li>Acceso a Ambos escenarios</li>
+              <li>Comida y Bebida</li>
+            </ul>
+          </div>
+
+          <footer class="pase-footer">
+            <p>LPS 100</p>
+          </footer>
+        </div>
+
+        <div class="premium pase">
+          <p class="nombre-pase">Pase 2 Dias</p>
+
+          <header class="pase-header">
+            <p>Incluye</p>
+          </header>
+
+          <div class="pase-body">
+            <ul>
+              <li>Acceso a Ambos escenarios</li>
+              <li>Comida y Bebida</li>
+              <li>Acceso VIP</li>
+              <li>Camisa del evento</li>
+            </ul>
+          </div>
+
+          <footer class="pase-footer">
+            <p>LPS 500</p>
+          </footer>
+        </div>
+      </div>
+    </section>
+
+    <footer class="site-footer">
+      <p>Rock & EDM Festival. Todos los derechos reservados.</p>
+    </footer>
     <script src="/build/js/app.js"></script>
   </body>
 </html>
